# PROJECT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  data.dvc  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: docker.yaml  lint.yaml  tests.yaml
configs/: README.md  evaluate.yaml  evaulate.yaml  train.yaml
configs/model/: dssm.yaml
dockerfiles/: Dockerfile  README.md  api.dockerfile  evaluate.dockerfile  infer.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
placeholder/dssm/: train.py
reports/: README.md
src/ehr_classification/: DataModule_unittest.py  DatasetLength_Unittest.py  api.py  data.py  evaluate.py  inference.py  model.py  train.py
src/ehr_classification/utils/: secret_manager.py
tests/: test_data.py  test_model.py
