[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ehr_classification"
version = "0.0.1"
description = "A refactor of a previously implemented EHR for MLOps course @ DTU"
authors = [
  { name = "Jakub Jędraszka", email = "s232946@dtu.dk" },
  { name = "Barbara Kośka", email = "s@dtu.dk" },
  { name = "Giulia Andretta", email = "s@dtu.dk" },
  { name = "Alexandre Comas", email = "s@dtu.dk" },
  { name = "Axel Sorensen", email = "s@dtu.dk" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
